--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
-    "lib": ["es2015"],
+    "lib": ["es2015", "DOM"],
     "module": "commonjs",
     "outDir": "dist",
     "sourceMap": true,
     "strict": true,
     "target": "ES2020",
+    "isolatedModules": true,
   },
   "include": [
     "./src"
